--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,20 +4,20 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "src/assets" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/assets" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: 'src/assets' # Media files will be stored in the repo under static/images/uploads
+public_folder: '/assets' # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
-  - name: "portfolio" # Used in routes, e.g., /admin/collections/blog
-    label: "Portfolio" # Used in the UI
-    folder: "src/pages/portfolio" # The path to the folder where the documents are stored
+  - name: 'portfolio' # Used in routes, e.g., /admin/collections/blog
+    label: 'Portfolio' # Used in the UI
+    folder: 'src/pages/portfolio' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "layout", name: "layout", widget: "hidden", default: "../../layouts/PostLayout.astro"}
-      - {label: "title", name: "title", widget: "string"}
-      - {label: "description", name: "description", widget: "string"}
-      - {label: "pubDate", name: "pubDate", widget: "datetime"}
-      - {label: "heroImage", name: "heroImage", widget: "image"}
-      - {label: "tags", name: "tags", widget: "markdown"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: 'layout', name: 'layout', widget: 'hidden', default: '../../layouts/PostLayout.astro' }
+      - { label: 'title', name: 'title', widget: 'string' }
+      - { label: 'description', name: 'description', widget: 'string' }
+      - { label: 'customer', name: 'customer', widget: 'datetime' }
+      - { label: 'heroImage', name: 'heroImage', widget: 'image' }
+      - { label: 'tags', name: 'tags', widget: 'markdown' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
